Update index.html and form.js for improved responsiveness and form handling

--- a/index.html
+++ b/index.html
@@ -495,19 +495,19 @@
         class="flex justify-between items-center text-center mt-30 md:mt-40 max-w-6xl mx-auto"
       >
         <div class="flex flex-col items-start">
-          <span class="font-Inter text-[63px] font-medium text-white mt-3"> Let’s </span>
-          <h1 class="font-Inter text-[63px] font-medium text-white ">
+          <span class="font-Inter text-[18px] md:text-[63px] font-medium text-white mt-3"> Let’s </span>
+          <h1 class="font-Inter text-[18px] md:text-[63px] font-medium text-white ">
             Work Together -
           </h1>
         </div>
 
         <div
-          class="flex items-center justify-center cursor-pointer px-3 border gap-4 rounded-2xl border-border-footer h-12 hover:bg-indigo-500 transition duration-500"
+          class="flex items-center justify-center cursor-pointer px-3 border gap-2 md:gap-4 rounded-2xl border-border-footer h-12 hover:bg-indigo-500 transition duration-500"
         >
           <button class="font-normal rounded-2xl">
-            <img src="src/assets/gmail.png" alt="" class="w-6" />
+            <img src="src/assets/gmail.png" alt="" class="w-3 md:w-6" />
           </button>
-          <p class="text-white m-0 font-Inter font-normal">adibbh1996@gmail.com</p>
+          <p class="text-[#C9C9C9] text-[10px] md:text-[17px] m-0 font-Inter font-normal">adibbh1996@gmail.com</p>
         </div>
       </div>
 
@@ -528,17 +528,27 @@
 
 
     <div class="container mx-auto px-4 py-4 my-4">
-      <div class="flex justify-between items-center max-w-6xl mx-auto">
+      <div class="flex flex-col gap-5  md:flex-row md:gap-0 justify-between items-center max-w-6xl mx-auto">
         <p class="text-grey font-Inter font-normal text-[14px]">
           © 2023 All rights reserved.
         </p>
 
         <div class="flex gap-4">
-          <img src="src/assets/fb.png" alt="">
-          <img src="src/assets/x.png" alt="">
-          <img src="src/assets/linkedin (2).png" alt="">
-          <img src="src/assets/insta.png" alt="">
-          <img src="src/assets/sd.png" alt="">
+          <a href="https://www.facebook.com/adib.benhadada" target="_blank">
+            <img src="src/assets/fb.png" alt="">
+          </a>
+          <a href="https://x.com/Adib__Bh" target="_blank">
+            <img src="src/assets/x.png" alt="">
+          </a>
+          <a href="https://www.linkedin.com/in/adib-ben-haddada-dev/" target="_blank">
+            <img src="src/assets/linkedin (2).png" alt="">
+          </a>
+          <a href="https://www.instagram.com/adib_ben_haddada/" target="_blank">
+            <img src="src/assets/insta.png" alt="">
+          </a>
+          <a href="">
+            <img src="src/assets/sd.png" alt="">
+          </a>
         </div>
       </div>
       
