--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
@@ -18,13 +18,13 @@
           >
             <li class="md:px-2"><a href="#home">Home</a></li>
             <li class="md:px-2"><a href="#about">About</a></li>
-            <li class="md:px-2"><a href="#projects">Projects</a></li>
             <li class="md:px-2"><a href="#services">Services</a></li>
+            <li class="md:px-2"><a href="#projects">Projects</a></li>
           </ul>
         </nav>
 
         <div class="hidden md:flex md:gap-10 xl:gap-20 items-center">
-          <button
+          <button id="contact_me"
             class="text-white border py-2 px-3 rounded-lg font-Montserrat cursor-pointer border-brd-blue"
           >
             Contact Me
@@ -80,13 +80,13 @@
               Full Stack Developer
             </h3>
           </div>
-          <p class="font-Poppins font-medium text-[19px] text-white mt-5 mb-10">
+          <p class="font-Poppins font-medium text-[19px] text-white mt-5 mb-10 md:max-w-4xl">
             I am a full-stack developer passionate about building innovative web
             applications. I specialize in creating dynamic front-end experiences
             and reliable back-end systems, with a focus on clean code and
             impactful solutions.
           </p>
-          <button
+          <button id="contact_me_hero"
             class="font-Montserrat font-medium text-base border rounded-4xl border-brd-blue px-10 py-4 text-white cursor-pointer"
           >
             Contact Me
@@ -95,7 +95,7 @@
       </div>
 
       <!-- about section -->
-      <div
+      <section id="about"
         class="flex flex-col items-center justify-center text-center mt-30 md:mt-60 max-w-6xl mx-auto"
       >
         <h1 class="font-Inter text-[45px] font-extrabold text-white mt-3">
@@ -108,7 +108,7 @@
             Get to know me
           </h3>
         </div>
-        <div>
+        <div class="md:max-w-4xl">
           <p class="font-Inter font-medium text-[17px] text-white mt-8 mb-8">
             Hi there! I'm Adib Bh, a full-stack developer specializing in
             building scalable, user-friendly, and high-performing web
@@ -136,10 +136,14 @@
         >
           Download Resume
         </button>
-      </div>
+      </section>
+
+
+
+
 
       <!-- services -->
-      <div
+      <section id="services"
         class="flex flex-col items-center justify-center text-center mt-30 md:mt-60 max-w-6xl mx-auto"
       >
         <h1 class="font-Inter text-[45px] font-extrabold text-white mt-3">
@@ -213,10 +217,8 @@
               </p>
             </div>
           </div>
-          <div
-            class="border border-dark-grey p-4 ring-1 ring-dark-grey ring-inset rounded-md flex flex-col items-start bg-linear-to-b from-grd-grey via-grd-grey to-grd-black mix-blend-lighten"
-          >
-            <div class="p-1">
+          <div class="md:col-span-2 lg:col-span-1 border border-dark-grey p-4 ring-1 ring-dark-grey ring-inset rounded-md flex flex-col items-start bg-linear-to-b from-grd-grey via-grd-grey to-grd-black mix-blend-lighten">
+            <div class="p-1 ">
               <div class="w-[44px] h-[44px] rounded-md bg-white relative my-5">
                 <img
                   src="src/assets/database-management.png"
@@ -269,13 +271,13 @@
                 system challenges into streamlined, well-performing solutions.
               </p>
             </div>
-            <div class="flex md:w-1/2 justify-center mx-auto mt-10 md:mt-0">
-              <img src="src/assets/techImg.png" alt="" class="w-full h-auto" />
+            <div class="flex md:w-1/2  justify-center mx-auto mt-10 md:mt-0">
+              <img src="src/assets/techImg.png" alt="" class=" md:w-full h-auto" />
             </div>
           </div>
           <!-- !!!!!!!!!!!!!!!!!! -->
           <div
-            class="border border-dark-grey p-4 ring-1 ring-dark-grey ring-inset rounded-md flex flex-col items-start bg-linear-to-b from-grd-grey via-grd-grey to-grd-black mix-blend-lighten"
+            class="md:col-span-2 lg:col-span-1 border border-dark-grey p-4 ring-1 ring-dark-grey ring-inset rounded-md flex flex-col items-start bg-linear-to-b from-grd-grey via-grd-grey to-grd-black mix-blend-lighten"
           >
             <div class="p-1">
               <div class="w-[44px] h-[44px] rounded-md bg-white relative my-5">
@@ -303,11 +305,11 @@
             </div>
           </div>
         </div>
-      </div>
+      </section>
 
       <!-- Projects section -->
 
-      <div
+      <section id="projects"
         class="flex flex-col items-center justify-center text-center mt-30 md:mt-60 max-w-6xl mx-auto"
       >
         <h1 class="font-Inter text-[45px] font-extrabold text-white mt-3">
@@ -411,11 +413,11 @@
             </div>
           </div>
         </div>
-      </div>
+      </section>
 
       <!-- contact form -->
 
-      <div
+      <div id="get_in_touch"
         class="flex flex-col items-center justify-center text-center mt-30 md:mt-60 max-w-6xl mx-auto"
       >
         <h1 class="font-Inter text-[45px] font-extrabold text-white mt-3">
@@ -495,20 +497,21 @@
         class="flex justify-between items-center text-center mt-30 md:mt-40 max-w-6xl mx-auto"
       >
         <div class="flex flex-col items-start">
-          <span class="font-Inter text-[20px] md:text-[50px] font-medium text-white mt-3"> Let’s </span>
-          <h1 class="font-Inter text-[20px] md:text-[50px] font-medium text-white ">
+          <span class="font-Inter text-[22px] md:text-[50px] font-medium text-white mt-3"> Let’s </span>
+          <h1 class="font-Inter text-[22px] md:text-[50px] font-medium text-white ">
             Work Together -
           </h1>
         </div>
 
-        <div
-          class="flex items-center justify-center cursor-pointer px-3 border gap-2 md:gap-4 rounded-2xl border-border-footer h-12 hover:bg-indigo-500 transition duration-500"
-        >
-          <button class="font-normal rounded-2xl">
-            <img src="src/assets/gmail.png" alt="" class="w-3 md:w-6" />
-          </button>
-          <p class="text-[#C9C9C9] text-[10px] md:text-[17px] m-0 font-Inter font-normal">adibbh1996@gmail.com</p>
-        </div>
+<a href="mailto:adibbh1996@gmail.com"
+   class="flex items-center justify-center cursor-pointer px-3 border gap-2 md:gap-4 rounded-2xl border-border-footer h-12 hover:bg-indigo-500 transition duration-500">
+  
+  <img src="src/assets/gmail.png" alt="Gmail" class="w-3 md:w-6" />
+  <p class="text-[#C9C9C9] text-[10px] md:text-[17px] m-0 font-Inter font-normal">
+    adibbh1996@gmail.com
+  </p>
+</a>
+
       </div>
 
 
