--- a/index.html
+++ b/index.html
@@ -29,31 +29,35 @@
           >
             Contact Me
           </button>
-          <img src="src/assets/light.svg" alt="" class="cursor-pointer" />
+          <button id="theme">
+            <img src="src/assets/light.svg" alt="" class="cursor-pointer" />
+          </button>
         </div>
         <!-- mobile navigation -->
-        <nav class="md:hidden relative cursor-pointer">
+        <nav class="md:hidden cursor-pointer">
           <button id="menu" class="cursor-pointer">
             <img src="src/assets/menus.png" alt="" class="w-10" />
           </button>
           <div
-            class="hidden absolute w-40 h-screen right-0 border-white border-l bg-primary z-10"
+            class="hidden  absolute w-full h-full right-0 top-20 bg-primary z-10"
             id="mobile-menu"
           >
             <ul
-              class="flex flex-col gap-8 text-grey font-Montserrat mt-20 text-center"
+              class="flex flex-col gap-14 text-grey font-Montserrat mt-20 text-center"
             >
-              <li class="px-2 hover:text-brd-blue transition duration-500">
+              <li class="px-2 hover:text-brd-blue transition duration-500 text-2xl">
                 <a href="#home">Home</a>
               </li>
-              <li class="px-2 hover:text-brd-blue transition duration-500">
+              <li class="px-2 hover:text-brd-blue transition duration-500 text-2xl">
                 <a href="#about">About</a>
               </li>
-              <li class="px-2 hover:text-brd-blue transition duration-500">
-                <a href="#projects">Projects</a>
-              </li>
-              <li class="px-2 hover:text-brd-blue transition duration-500">
+         
+              <li class="px-2 hover:text-brd-blue transition duration-500 text-2xl">
                 <a href="#services">Services</a>
+              </li>
+
+                   <li class="px-2 hover:text-brd-blue transition duration-500 text-2xl">
+                <a href="#projects">Projects</a>
               </li>
             </ul>
           </div>
@@ -158,7 +162,6 @@
         </div>
         <!--* services list -->
         <div class="mt-10 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
-          <!-- !Front-End Development -->
           <div
             class="border border-dark-grey p-4 ring-1 ring-dark-grey ring-inset rounded-md flex flex-col items-start bg-linear-to-b from-grd-grey via-grd-grey to-grd-black mix-blend-lighten"
           >
@@ -275,7 +278,6 @@
               <img src="src/assets/techImg.png" alt="" class=" md:w-full h-auto" />
             </div>
           </div>
-          <!-- !!!!!!!!!!!!!!!!!! -->
           <div
             class="md:col-span-2 lg:col-span-1 border border-dark-grey p-4 ring-1 ring-dark-grey ring-inset rounded-md flex flex-col items-start bg-linear-to-b from-grd-grey via-grd-grey to-grd-black mix-blend-lighten"
           >
