Fix mobile navigation button alt text and improve menu visibility handling

--- a/index.html
+++ b/index.html
@@ -33,10 +33,12 @@
             <img src="src/assets/light.svg" alt="" class="cursor-pointer" />
           </button>
         </div>
+
+        
         <!-- mobile navigation -->
         <nav class="md:hidden cursor-pointer">
           <button id="menu" class="cursor-pointer z-20 relative">
-            <img src="src/assets/menus.png" alt="men" class="w-10" />
+            <img src="src/assets/menus.png" alt="menu" class="w-10" />
           </button>
           <div
             class="hidden inset-0 w-full h-full bg-primary z-10"
@@ -561,6 +563,7 @@
     </div>
     <script type="module" src="./src/main.js" defer></script>
     <script type="module" src="./src/form.js" defer></script>
+    <script type="module" src="./src/lightMode.js" defer></script>
     <script type="text/javascript"
         src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
 </script>
