--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
       <div
         class="bg-[url('/src/assets/bg.png')] bg-cover bg-center bg-no-repeat max-w-6xl mx-auto"
       >
-        <div
-          class="flex flex-col items-center justify-center text-center mt-10 md:mt-20"
+        <div 
+          class="hero from-right flex flex-col items-center justify-center text-center mt-10 md:mt-20"
         >
           <div>
             <img src="src/assets/avatar.png" alt="" />
