--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container mx-auto px-4 py-4">
       <!-- Header -->
       <header class="flex justify-between items-center p-4">
-        <h1 class="text-white cursor-pointer font-OleoScript text-4xl">Adib</h1>
+        <h1 class="text-white cursor-pointer font-OleoScript text-4xl logo">Adib</h1>
         <nav class="hidden md:block">
           <ul
             class="flex md:gap-4 xl:gap-10 text-grey font-Montserrat font-medium text-base cursor-pointer"
@@ -72,7 +72,7 @@
         class="bg-[url('/src/assets/bg.png')] bg-cover bg-center bg-no-repeat max-w-6xl mx-auto"
       >
         <div 
-          class="hero from-right flex flex-col items-center justify-center text-center mt-10 md:mt-20"
+          class="hero from-left flex flex-col items-center justify-center text-center mt-10 md:mt-20"
         >
           <div>
             <img src="src/assets/avatar.png" alt="" />
@@ -563,6 +563,7 @@
     </div>
     <script type="module" src="./src/main.js" defer></script>
     <script type="module" src="./src/form.js" defer></script>
+    <script type="module" src="./src/lightMode.js" defer></script>
     <script type="text/javascript"
         src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
 </script>
