Enhance light mode functionality by adding theme management and updating hero section styles

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
       <!-- hero section -->
       <div
-        class="bg-[url('/src/assets/bg.png')] bg-cover bg-center bg-no-repeat max-w-6xl mx-auto"
+        class="bg-[url('/src/assets/bg.png')] bg-cover bg-center bg-no-repeat max-w-6xl mx-auto hero-section"
       >
         <div 
           class="hero from-left flex flex-col items-center justify-center text-center mt-10 md:mt-20"
